--- a/site/themes/sogilis/layouts/_default/summary.html
+++ b/site/themes/sogilis/layouts/_default/summary.html
@@ -13,6 +13,6 @@
       />
     {{ end }}
   </div>
-  <p class="title_level_1 blog_index_article__title">{{ .Title }}</p>
+  <p class="title_1 blog_index_article__title">{{ .Title }}</p>
   <p class="blog_index_article__readmore">{{ i18n "readMore" }}…</p>
 </a>
