--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -8,21 +8,43 @@
     </a>
     <nav>
       <div class="dropdown">
-        <a class="dropbtn">{{ i18n "services"}}</a>
+        <a
+          class="bar-deco bar-deco-hover"
+        >
+            {{ i18n "services"}}</a>
         <div class="dropdown-content">
-          <a href="https://sogilis.fr/services-applications-cloud-native.html">
+          <a
+            class="bar-deco bar-deco-hover"
+            href="https://sogilis.fr/services-applications-cloud-native.html"
+          >
             {{ i18n "cloudNativeApplications" }}
           </a>
-          <a href="https://sogilis.fr/services-embarques-et-iot.html">
+          <a
+            class="bar-deco bar-deco-hover"
+            href="https://sogilis.fr/services-embarques-et-iot.html"
+          >
             {{ i18n "embeddedSoftwares" }}
           </a>
-          <a href="https://sogilis.fr/services-logiciels-critiques.html">
+          <a
+            class="bar-deco bar-deco-hover"
+            href="https://sogilis.fr/services-logiciels-critiques.html"
+          >
             {{ i18n "criticalSoftwares" }}
           </a>
         </div>
       </div>
-      <a href="https://sogilis.fr/vision.html">{{ i18n "ourVision" }}</a>
-      <a href="https://sogilis.fr/contact.html">{{ i18n "contact" }}</a>
+      <a
+        class="bar-deco bar-deco-hover"
+        href="https://sogilis.fr/vision.html"
+      >
+        {{ i18n "ourVision" }}
+      </a>
+      <a
+        class="bar-deco bar-deco-hover"
+        href="https://sogilis.fr/contact.html"
+      >
+        {{ i18n "contact" }}
+      </a>
     </nav>
   </div>
 
