--- a/site/themes/sogilis/assets/css/index-page.css
+++ b/site/themes/sogilis/assets/css/index-page.css
@@ -5,7 +5,7 @@ main {
 /* The grid element on the index page */
 /* ========================================================================== */
 
-main > #blog_index {
+#blog_index {
   display: grid;
   grid-gap: 2em;
   grid-auto-rows: 22em;
@@ -13,13 +13,13 @@ main > #blog_index {
 }
 
 @media (min-width: 768px) {
-  main > #blog_index {
+  #blog_index {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (min-width: 992px) {
-  main > #blog_index {
+  #blog_index {
     grid-template-columns: repeat(3, 1fr);
   }
 }
@@ -27,7 +27,7 @@ main > #blog_index {
 /* Each cell of the grid */
 /* ========================================================================== */
 
-main > #blog_index > a.blog_index_article {
+.blog_index_article {
   display: grid;
   grid-template-rows: 11.7em 6.3em 2em;
   grid-gap: 0.5em;
@@ -37,21 +37,21 @@ main > #blog_index > a.blog_index_article {
 /* Image */
 /* ========================================================================== */
 
-main > #blog_index > a.blog_index_article > div > img {
+.blog_index_article img {
   height: 100%;
   width: 100%;
   object-fit: cover;
   transition: all 0.8s;
 }
 
-main > #blog_index > a.blog_index_article:hover > div > img {
+.blog_index_article:hover img {
   filter: grayscale(100%);
 }
 
 /* The title and 'Lire la suite */
 /* ========================================================================== */
 
-main > #blog_index > a.blog_index_article > p {
+.blog_index_article > p {
   margin: 0 1.6em;
   transition: color 0.5s;
 }
@@ -59,23 +59,20 @@ main > #blog_index > a.blog_index_article > p {
 /* The title */
 /* ========================================================================== */
 
-main > #blog_index > a.blog_index_article:hover > p.blog_index_article__title {
+.blog_index_article__title {
   color: var(--dark-grey);
 }
 
 /* p is "Lire la suite" in French */
 /* ========================================================================== */
 
-main > #blog_index > a.blog_index_article > p.blog_index_article__readmore {
+.blog_index_article__readmore {
   font-weight: 500;
   color: var(--wolf-blue);
   text-align: right;
 }
 
-main
-  > #blog_index
-  > a.blog_index_article:hover
-  > p.blog_index_article__readmore {
+.blog_index_article:hover > .blog_index_article__readmore {
   color: var(--light-electric-blue);
   text-decoration: underline;
 }
