--- a/site/themes/sogilis/assets/css/footer.css
+++ b/site/themes/sogilis/assets/css/footer.css
@@ -16,17 +16,17 @@ footer {
 
 /* Addresses */
 /* ================ */
-footer > #sofooter > #sofooterContactgrid .adresses {
+#sofooterContactgrid .adresses {
   color: var(--medium-grey);
 }
 
-footer > #sofooter > #sofooterContactgrid .adresses > p:nth-of-type(1) {
+#sofooterContactgrid .adresses > p:nth-of-type(1) {
   font-size: 0.9em;
   font-weight: 700;
   margin-bottom: 0;
   color: var(--medium-grey);
 }
-footer > #sofooter > #sofooterContactgrid .adresses > p:nth-of-type(1)::before {
+#sofooterContactgrid .adresses > p:nth-of-type(1)::before {
   content: '';
   display: block;
   width: 0.8em;
@@ -42,27 +42,27 @@ footer > #sofooter > #sofooterContactgrid .adresses > p:nth-of-type(1)::before {
   margin-top: 0.9em;
 }
 
-footer > #sofooter > #sofooterContactgrid .adresses > p:nth-of-type(2) {
+#sofooterContactgrid .adresses > p:nth-of-type(2) {
   font-size: 0.9rem;
   font-weight: 400;
 }
 /* List */
 /* ===== */
-footer > #sofooter .liens_pages > ul {
+#sofooter .liens_pages > ul {
   padding-left: 2rem;
 }
-footer > #sofooter .liens_pages > ul > li {
+#sofooter .liens_pages li {
   margin-bottom: 1rem;
   font-size: 0.9rem;
   font-weight: 600;
 }
 
-footer > #sofooter .liens_pages > ul > li > a {
+#sofooter .liens_pages a {
   color: var(--medium-grey);
   transition: color 0.3s;
 }
 
-footer > #sofooter .liens_pages > ul > li > a:hover {
+#sofooter .liens_pages a:hover {
   color: var(--wolf-blue);
 }
 
@@ -70,7 +70,7 @@ footer > #sofooter .liens_pages > ul > li > a:hover {
 /* Defnition of the Footer grid */
 /* ========================================================================== */
 
-footer > #sofooter {
+#sofooter {
   display: grid;
   align-items: center;
   align-content: center;
@@ -78,25 +78,25 @@ footer > #sofooter {
 
 /* Logo */
 /* ==== */
-footer > #sofooter > #sofooterLogo {
+#sofooterLogo {
   grid-area: sofooterLogo;
 }
 
 /* Services */
 /* ======== */
-footer > #sofooter > #sofooterServices {
+#sofooterServices {
   grid-area: sofooterServices;
 }
 
 /* company */
 /* ======= */
-footer > #sofooter > #sofooterCompany {
+#sofooterCompany {
   grid-area: sofooterCompany;
 }
 
 /* hr */
 /* == */
-footer > #sofooter > hr#sofooterHr {
+#sofooterHr {
   grid-area: sofooterHr;
   background-color: var(--super-light-grey);
   margin-top: 3rem;
@@ -106,23 +106,23 @@ footer > #sofooter > hr#sofooterHr {
 
 /* Subfooter */
 /* ========= */
-footer > #sofooter > #sofooterSubfooter {
+#sofooterSubfooter {
   grid-area: sofooterSubfooter;
   font-size: 0.8em;
   font-weight: 400;
   display: flex;
 }
-footer > #sofooter > #sofooterSubfooter > a:nth-child(2) {
+#sofooterSubfooter > a:nth-child(2) {
   color: var(--medium-grey);
 }
 @media (max-width: 575px) {
-  footer > #sofooter > #sofooterSubfooter {
+  #sofooterSubfooter {
     flex-direction: column;
     align-items: center;
   }
 }
 @media (min-width: 576px) {
-  footer > #sofooter > #sofooterSubfooter {
+  #sofooterSubfooter {
     justify-content: space-between;
   }
 }
@@ -131,7 +131,7 @@ footer > #sofooter > #sofooterSubfooter > a:nth-child(2) {
 /* Definition of the inner grid of 'Contact' */
 /* ========================================================================== */
 
-footer > #sofooter > #sofooterContactgrid {
+#sofooterContactgrid {
   grid-area: sofooterContactgrid;
   display: grid;
   align-items: center;
@@ -141,7 +141,7 @@ footer > #sofooter > #sofooterContactgrid {
 
 /* Title « contact » */
 /* ================= */
-footer > #sofooter > #sofooterContactgrid > #sofooterContactgridTitle {
+#sofooterContactgridTitle {
   grid-area: sofooterContactgridTitle;
   margin-bottom: 0;
   margin-left: 0;
@@ -149,51 +149,37 @@ footer > #sofooter > #sofooterContactgrid > #sofooterContactgridTitle {
 
 /* Contact us link, with border*/
 /* =========================== */
-footer > #sofooter > #sofooterContactgrid > #sofooterContactgridContactus {
+#sofooterContactgridContactus {
   grid-area: sofooterContactgridContactus;
   max-width: 13rem;
 }
 
 /* Social networks icônes (twitter + linkedin) */
 /* =========================================== */
-footer > #sofooter > #sofooterContactgrid > #sofooterContactgridSocialnetwork {
+#sofooterContactgridSocialnetwork {
   grid-area: sofooterContactgridSocialnetwork;
 }
-footer
-  > #sofooter
-  > #sofooterContactgrid
-  > #sofooterContactgridSocialnetwork
-  svg {
+#sofooterContactgridSocialnetwork svg {
   width: 2rem;
   margin-bottom: 1rem;
 }
-footer
-  > #sofooter
-  > #sofooterContactgrid
-  > #sofooterContactgridSocialnetwork
-  svg
-  > path {
+#sofooterContactgridSocialnetwork svg > path {
   fill: #a7e4ea;
   transition: fill 0.3s;
 }
-footer
-  > #sofooter
-  > #sofooterContactgrid
-  > #sofooterContactgridSocialnetwork
-  svg:hover
-  > path {
+#sofooterContactgridSocialnetwork svg:hover > path {
   fill: #016099;
 }
 
 /* Grenoble address */
 /* ================ */
-footer > #sofooter > #sofooterContactgrid > #sofooterContactgridGrenoble {
+#sofooterContactgridGrenoble {
   grid-area: sofooterContactgridGrenoble;
 }
 
 /* Lyon address */
 /* ================ */
-footer > #sofooter > #sofooterContactgrid > #sofooterContactgridLyon {
+#sofooterContactgridLyon {
   grid-area: sofooterContactgridLyon;
 }
 
@@ -206,7 +192,7 @@ footer > #sofooter > #sofooterContactgrid > #sofooterContactgridLyon {
   /* Footer grid */
   /* =========== */
 
-  footer > #sofooter {
+  #sofooter {
     grid-template-areas:
       'sofooterContactgrid'
       'sofooterServices'
@@ -223,7 +209,7 @@ footer > #sofooter > #sofooterContactgrid > #sofooterContactgridLyon {
   /* Inner grid of 'Contact' */
   /* ======================= */
 
-  footer > #sofooter > #sofooterContactgrid {
+  #sofooterContactgrid {
     grid-template-areas:
       'sofooterContactgridTitle'
       'sofooterContactgridContactus'
@@ -232,14 +218,14 @@ footer > #sofooter > #sofooterContactgrid > #sofooterContactgridLyon {
       'sofooterContactgridLyon';
   }
 
-  footer > #sofooter > #sofooterContactgrid > #sofooterContactgridContactus,
-  footer > #sofooter > #sofooterContactgrid > #sofooterContactgridSocialnetwork,
-  footer > #sofooter > #sofooterContactgrid > #sofooterContactgridGrenoble,
-  footer > #sofooter > #sofooterContactgrid > #sofooterContactgridLyon {
+  #sofooterContactgridContactus,
+  #sofooterContactgridSocialnetwork,
+  #sofooterContactgridGrenoble,
+  #sofooterContactgridLyon {
     margin-left: 2rem;
   }
 
-  footer > #sofooter > #sofooterContactgrid > #sofooterContactgridContactus {
+  #sofooterContactgridContactus {
     margin: 2rem 0 2rem 2rem;
   }
 }
@@ -248,7 +234,7 @@ footer > #sofooter > #sofooterContactgrid > #sofooterContactgridLyon {
   /* Footer grid */
   /* =========== */
 
-  footer > #sofooter {
+  #sofooter {
     grid-template-areas:
       'sofooterContactgrid  sofooterContactgrid'
       'sofooterServices     sofooterCompany'
@@ -261,7 +247,7 @@ footer > #sofooter > #sofooterContactgrid > #sofooterContactgridLyon {
   /* Inner grid of 'Contact' */
   /* ======================= */
 
-  footer > #sofooter > #sofooterContactgrid {
+  #sofooterContactgrid {
     grid-template-areas:
       'sofooterContactgridTitle      sofooterContactgridTitle'
       'sofooterContactgridContactus  sofooterContactgridSocialnetwork'
@@ -269,7 +255,7 @@ footer > #sofooter > #sofooterContactgrid > #sofooterContactgridLyon {
     grid-template-columns: 50% 50%;
   }
 
-  footer > #sofooter > #sofooterContactgrid > div {
+  #sofooterContactgrid > div {
     margin: 2rem 0 2rem 2rem;
   }
 }
@@ -278,7 +264,7 @@ footer > #sofooter > #sofooterContactgrid > #sofooterContactgridLyon {
   /* Footer grid */
   /* =========== */
 
-  footer > #sofooter {
+  #sofooter {
     grid-template-areas:
       'sofooterLogo        .                   sofooterContactgrid   sofooterContactgrid'
       '.                   .                   sofooterServices      sofooterCompany'
@@ -297,7 +283,7 @@ footer > #sofooter > #sofooterContactgrid > #sofooterContactgridLyon {
   /* Inner grid of 'Contact' */
   /* ======================= */
 
-  footer > #sofooter > #sofooterContactgrid {
+  #sofooterContactgrid {
     grid-template-areas:
       'sofooterContactgridTitle      sofooterContactgridTitle          sofooterContactgridTitle     sofooterContactgridTitle'
       'sofooterContactgridContactus  sofooterContactgridSocialnetwork  sofooterContactgridGrenoble  sofooterContactgridLyon';
