--- a/site/themes/sogilis/assets/css/header-inf767.css
+++ b/site/themes/sogilis/assets/css/header-inf767.css
@@ -10,21 +10,21 @@ header {
   margin-top: 1rem;
 }
 
-header > div#navBarDesktop {
+#navBarDesktop {
   display: none;
 }
 
-header > div#navBarMobile {
+#navBarMobile {
+  display: flex;
   align-items: center;
 }
 
-header > div#navBarMobile > a {
-  display: block;
+#navBarMobile > a {
   height: 2rem;
 }
 
 /* When we scroll */
-header.content_header_scroll {
+.content_header_scroll {
   /* Others declarations into header.html */
   padding: 0;
 }
@@ -34,7 +34,7 @@ header.content_header_scroll {
 /* Logo on the top left of the screen */
 /* =========================================================================== */
 
-header > div#navBarMobile > a > img {
+#navBarMobile > a > img {
   height: 122%;
 }
 
@@ -43,15 +43,15 @@ header > div#navBarMobile > a > img {
 /* Describe the three bars icon */
 /* ========================================================================== */
 
-header > div#navBarMobile > a#headerMenuButtonMobile {
+#headerMenuButtonMobile {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 
-header > div#navBarMobile > a#headerMenuButtonMobile::before,
-header > div#navBarMobile > a#headerMenuButtonMobile > div,
-header > div#navBarMobile > a#headerMenuButtonMobile::after {
+#headerMenuButtonMobile::before,
+#headerMenuButtonMobile > div,
+#headerMenuButtonMobile::after {
   background-color: var(--dark-grey);
   border-radius: 1px;
   height: 0.1875rem;
@@ -63,15 +63,15 @@ header > div#navBarMobile > a#headerMenuButtonMobile::after {
   transition: transform 0.3s;
 }
 
-header > div#navBarMobile > a#headerMenuButtonMobile::before,
-header > div#navBarMobile > a#headerMenuButtonMobile::after {
+#headerMenuButtonMobile::before,
+#headerMenuButtonMobile::after {
   content: ' ';
 }
 /* ========================================================================== */
 /* ========= Nav tag (not displayed when the page is loaded) ================ */
 /* ========================================================================== */
 
-header > div#navBarMobile > nav#headerMainMenuMobile {
+#headerMainMenuMobile {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -101,12 +101,12 @@ header > div#navBarMobile > nav#headerMainMenuMobile {
 /* The goal of this two `div` is simply to center the `ul` */
 /* between two `div`. */
 /* Only the first `div` contains elements. */
-header > div#navBarMobile > nav#headerMainMenuMobile > div:nth-child(1),
-header > div#navBarMobile > nav#headerMainMenuMobile > div:nth-child(3) {
+#headerMainMenuMobile > div:nth-child(1),
+#headerMainMenuMobile > div:nth-child(3) {
   flex: 1 1 auto;
 }
 
-header > div#navBarMobile > nav#headerMainMenuMobile > ul {
+#headerMainMenuMobile > ul {
   flex: 0 1 auto;
   /* Because of reboot.css */
   padding-left: 0;
@@ -118,14 +118,11 @@ header > div#navBarMobile > nav#headerMainMenuMobile > ul {
 /* In this `div`, there is the green line */
 /* (it's the pseudo-element `::before`) */
 /* This pseudo-element have `margin-top: 50%` */
-header > div#navBarMobile > nav#headerMainMenuMobile > div:nth-child(1) {
+#headerMainMenuMobile > div:nth-child(1) {
   display: flex;
   align-items: center;
 }
-header
-  > div#navBarMobile
-  > nav#headerMainMenuMobile
-  > div:nth-child(1)::before {
+#headerMainMenuMobile > div:nth-child(1)::before {
   content: '';
   margin-top: 50%;
   width: 50vw;
@@ -136,30 +133,30 @@ header
 /* Styles for `ul` element, with anchors */
 /* ========================================================================== */
 
-header > div#navBarMobile > nav#headerMainMenuMobile > ul > li > a {
+#headerMainMenuMobile a {
   color: var(--wolf-blue);
   font-family: var(--font-serif);
   font-weight: 800;
 }
 @media (max-width: 575px) {
-  header > div#navBarMobile > nav#headerMainMenuMobile > ul > li > a {
+  #headerMainMenuMobile a {
     font-size: 1.3rem;
   }
 }
 @media (min-width: 576px) {
-  header > div#navBarMobile > nav#headerMainMenuMobile > ul > li > a {
+  #headerMainMenuMobile a {
     font-size: 2rem;
   }
 }
-header > div#navBarMobile > nav#headerMainMenuMobile > ul > li {
+#headerMainMenuMobile li {
   padding: 0.5rem 0;
   /* Needed for animation, of `li` elements */
   transition: transform 400ms 510ms;
 }
-header > div#navBarMobile > nav#headerMainMenuMobile > ul > li > a:active {
+#headerMainMenuMobile a:active {
   font-weight: 500;
 }
-header > div#navBarMobile > nav#headerMainMenuMobile > ul > li > a:hover {
+#headerMainMenuMobile a:hover {
   text-decoration: underline;
 }
 
@@ -168,16 +165,16 @@ header > div#navBarMobile > nav#headerMainMenuMobile > ul > li > a:hover {
  * `menuMobileIsDisplayed` css class is append
  * =====================
  */
-header > div#navBarMobile > nav#headerMainMenuMobile > ul > li:nth-child(odd) {
+#headerMainMenuMobile li:nth-child(odd) {
   transform: translateX(30%);
 }
-header > div#navBarMobile > nav#headerMainMenuMobile > ul > li:nth-child(even) {
+#headerMainMenuMobile li:nth-child(even) {
   transform: translateX(-30%);
 }
 
 /* The last `li` tag is not animated */
 /* ===================== */
-header > div#navBarMobile > nav#headerMainMenuMobile > ul > li:last-child {
+#headerMainMenuMobile li:last-child {
   transform: none;
 }
 
@@ -198,29 +195,22 @@ header > div#navBarMobile > nav#headerMainMenuMobile > ul > li:last-child {
 /* Three lines icons are transformed to cross when menuMobileIsDisplayed */
 /* ========================================================================== */
 
-header > div#navBarMobile > a#headerMenuButtonMobile.menuMobileIsDisplayed {
+#headerMenuButtonMobile.menuMobileIsDisplayed {
   /* Should be on top of all elements, even the `nav` element.. */
   z-index: 2;
 }
 
-header
-  > div#navBarMobile
-  > a#headerMenuButtonMobile.menuMobileIsDisplayed::before {
+#headerMenuButtonMobile.menuMobileIsDisplayed::before {
   /* Following declaration is animated thanks `transition:` attribute */
   transform: rotate(45deg) translate(0.5rem, 0.5rem);
 }
 
-header
-  > div#navBarMobile
-  > a#headerMenuButtonMobile.menuMobileIsDisplayed::after {
+#headerMenuButtonMobile.menuMobileIsDisplayed::after {
   /* Following declaration is animated thanks `transition:` attribute */
   transform: rotate(-45deg) translate(0.5rem, -0.5rem);
 }
 
-header
-  > div#navBarMobile
-  > a#headerMenuButtonMobile.menuMobileIsDisplayed
-  > div {
+#headerMenuButtonMobile.menuMobileIsDisplayed > div {
   /* Following declaration is animated thanks `transition:` attribute */
   background-color: transparent;
 }
@@ -233,7 +223,7 @@ body.menuMobileIsDisplayed {
   overflow: hidden;
 }
 
-header > div#navBarMobile > nav#headerMainMenuMobile.menuMobileIsDisplayed {
+#headerMainMenuMobile.menuMobileIsDisplayed {
   /* Should be above all other elements, except the cross button. */
   z-index: 1;
   /* Following declaration is animated thanks `transition:` attribute */
@@ -242,16 +232,8 @@ header > div#navBarMobile > nav#headerMainMenuMobile.menuMobileIsDisplayed {
   transform: scale(1);
 }
 
-header
-  > div#navBarMobile
-  > nav#headerMainMenuMobile.menuMobileIsDisplayed
-  > ul
-  > li:nth-child(odd),
-header
-  > div#navBarMobile
-  > nav#headerMainMenuMobile.menuMobileIsDisplayed
-  > ul
-  > li:nth-child(even) {
+#headerMainMenuMobile.menuMobileIsDisplayed li:nth-child(odd),
+#headerMainMenuMobile.menuMobileIsDisplayed li:nth-child(even) {
   /* Following declaration is animated thanks `transition:` attribute */
   transform: translateX(0);
 }
